Ajout de footer (espace bas de la page) + début d'immagination du style (futuriste)

--- a/page1/index.html
+++ b/page1/index.html
@@ -9,7 +9,10 @@
   <body>
     <header class="haut">
       <div class="container">
-        <h1>Qu'est-ce que la SNT ?</h1>
+        <h1>SNT Hub</h1>
+        <div class="sous-titre">
+          <h2>Qu'est-ce que la SNT ?</h2>
+        </div>
         <div class="nav-buttons">
           <button>Page 1</button>
           <button>Page 2</button>
@@ -17,6 +20,12 @@
         </div>
       </div>
     </header>
+    <div>
+      <p>c'est un paragraphe</p>
+    </div>
+    <footer>
+      <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
