Ajout du style du code des autres page + essaye de lier les page entre eux

--- a/page1/index.html
+++ b/page1/index.html
@@ -14,9 +14,12 @@
           <h2>Qu'est-ce que la SNT ?</h2>
         </div>
         <div class="nav-buttons">
-          <button>Page 1</button>
-          <button>Page 2</button>
-          <button>Page 3</button>
+          <button onclick="location.href='page2.html'">Accueil</button>
+          <button>Le programme</button>
+          <button>Les activitées</button>
+          <button>Page 4</button>
+          <button>Page 5</button>
+          <button>Page 6</button>
         </div>
       </div>
     </header>
