ajout du style pour la page2 + ajout de la fonctionnalitée des bouton sur la page1 et 2

--- a/page2/index.html
+++ b/page2/index.html
@@ -14,12 +14,16 @@
           <h2>Qu'est-ce que la SNT ?</h2>
         </div>
         <div class="nav-buttons">
-          <button>Accueil</button>
-          <button>Le programme</button>
-          <button>Les activitées</button>
-          <button>Page 4</button>
-          <button>Page 5</button>
-          <button>Page 6</button>
+          <button onclick="location.href='/page1/index.html'">Accueil</button>
+          <button onclick="location.href='/page2/index.html'">
+            Le programme
+          </button>
+          <button onclick="location.href='/page3/index.html'">
+            Les activitées
+          </button>
+          <button onclick="location.href='/page4/index.html'">Page 4</button>
+          <button onclick="location.href='/page5/index.html'">Page 5</button>
+          <button onclick="location.href='/page6/index.html'">Page 6</button>
         </div>
       </div>
     </header>
