finalisation du style de chaque page (dans les grande ligne)

--- a/page1/index.html
+++ b/page1/index.html
@@ -14,7 +14,7 @@
           <h2>Qu'est-ce que la SNT ?</h2>
         </div>
         <div class="nav-buttons">
-          <button onclick="location.href='index.html'">Accueil</button>
+          <button onclick="location.href='/page1/index.html'">Accueil</button>
           <button onclick="location.href='/page2/index.html'">
             Le programme
           </button>
