--- a/page2/index.html
+++ b/page2/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1>SNT Hub</h1>
         <div class="sous-titre">
-          <h2>Qu'est-ce que la SNT ?</h2>
+          <h2>Programme officiel de la SNT</h2>
         </div>
         <div class="nav-buttons">
           <button onclick="location.href='/page1/index.html'">Accueil</button>
