--- a/page1/index.html
+++ b/page1/index.html
@@ -28,7 +28,16 @@
       </div>
     </header>
     <div>
-      <p>c'est un paragraphe</p>
+      <h4>C'est quoi la SNT ?</h4>
+      <hr />
+      <p>
+        La Science Numérique et Technologique (SNT) est une matiere enseignée en
+        seconde générale et technlogique. Permettant de donnée une culture
+        numérique de base
+      </p>
+      <h4>Sommaire:</h4>
+      <hr />
+      <h5>Le programme officiel de la SNT</h5>
     </div>
     <footer>
       <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
