ajustement du style de la page 2 et début de son écriture + presque fin de l'écriture de la page 2

--- a/page1/index.html
+++ b/page1/index.html
@@ -37,7 +37,15 @@
       </p>
       <h4>Sommaire:</h4>
       <hr />
-      <h5>Le programme officiel de la SNT</h5>
+      <h5>Le programme officiel de la SNT:</h5>
+      <p class="paragraphe">c un paragraphe</p>
+      <h5>Qu'est-ce qu'on fait en SNT au lycée Charles DE GAULLE ?</h5>
+      <p class="paragraphe">c un paragraphe</p>
+      <h5>Pages HTML</h5>
+      <p class="paragraphe">c un paragraphe</p>
+      <h5>Non au Harcèlement</h5>
+      <p class="paragraphe">c un paragraphe</p>
+      <h5>Vers quelle poursuite d'études ?</h5>
     </div>
     <footer>
       <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
