--- a/page2/index.html
+++ b/page2/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La SNT</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <header class="haut">
       <div class="container">
         <h1>SNT Hub</h1>
         <div class="sous-titre">
-          <h2>Programme officiel de la SNT</h2>
+          <h2>Le programme</h2>
         </div>
         <div class="nav-buttons">
           <button onclick="location.href='/page1/index.html'">Accueil</button>
@@ -28,7 +32,48 @@
       </div>
     </header>
     <div>
-      <p>c'est un paragraphe</p>
+      <h4 class="programme">Programme officiel de la SNT</h4>
+      <hr />
+      <div class="container2">
+        <h4 class="theme">Theme A:</h4>
+        <h4>Internet <i class="fa-solid fa-globe"></i></h4>
+      </div>
+      <h5>Phase de découverte:</h5>
+      <p>
+        <i class="fa fa-arrow-right"></i> découverte#A.1 : Les métiers du
+        numérique
+      </p>
+      <p>
+        <i class="fa fa-arrow-right"></i> découverte#A.2 : Les bases du codage
+      </p>
+      <p>
+        <i class="fa fa-arrow-right"></i> découverte#A.3 : Comment en est-on
+        arrivé là ?
+      </p>
+      <p>
+        <i class="fa fa-arrow-right"></i> découverte#A.4 : Internet, comment ça
+        marche ?
+      </p>
+      <h5>Phase de remédiation:</h5>
+      <p>
+        <i class="fa fa-arrow-right"></i>
+        L'essentiel à connaître sur le thème
+      </p>
+      <h5>Découverte des métiers liés au thème</h5>
+      <h5>Capsules vidéos:</h5>
+      <p>
+        <i class="fa fa-arrow-right"></i>
+        Dans quelle société numérique vivons-nous ?
+      </p>
+      <h5>Phase de recherche:</h5>
+      <p>
+        <i class="fa fa-arrow-right"></i>
+        Découvrir le routage pour accéder à un site internet
+      </p>
+      <h4 class="theme">Theme B:</h4>
+      <h4>Le WEB <i class="fa-solid fa-globe"></i></h4>
+
+      <p></p>
     </div>
     <footer>
       <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
