finalisation page 2 manque détaille style css

--- a/page2/index.html
+++ b/page2/index.html
@@ -34,23 +34,42 @@
     <div>
       <hr />
       <h4>Sommaire:</h4>
-      <p><i class="fa fa-arrow-right"></i> Internet</p>
-      <p><i class="fa fa-arrow-right"></i> Le Web</p>
-      <p><i class="fa fa-arrow-right"></i> Les réseaux sociaux</p>
-      <p>
-        <i class="fa fa-arrow-right"></i> Les données structurées et leur
-        traitement
-      </p>
-      <p>
-        <i class="fa fa-arrow-right"></i> Localisation, cartographie et mobilité
-      </p>
-      <p>
-        <i class="fa fa-arrow-right"></i> Informatique embarquée et objets
-        connectés
-      </p>
-      <p><i class="fa fa-arrow-right"></i> La photographie numérique</p>
+      <li>
+        <a href="#section1"><i class="fa fa-arrow-right"> </i> Internet</a>
+      </li>
+      <li>
+        <a href="#section2"><i class="fa fa-arrow-right"> </i> Le Web</a>
+      </li>
+      <li>
+        <a href="#section3"
+          ><i class="fa fa-arrow-right"> </i> Les réseaux sociaux</a
+        >
+      </li>
+      <li>
+        <a href="#section4"
+          ><i class="fa fa-arrow-right"> </i> Les données structurées et leur
+          traitement</a
+        >
+      </li>
+      <li>
+        <a href="#section5"
+          ><i class="fa fa-arrow-right"> </i> Localisation, cartographie et
+          mobilité</a
+        >
+      </li>
+      <li>
+        <a href="#section6"
+          ><i class="fa fa-arrow-right"> </i> Informatique embarquée et objets
+          connectés</a
+        >
+      </li>
+      <li>
+        <a href="#section7"
+          ><i class="fa fa-arrow-right"> </i> La photographie numérique</a
+        >
+      </li>
       <hr />
-      <h4>Internet</h4>
+      <h4 id="section1" class="section">Internet</h4>
       <p><i class="fa fa-arrow-right"></i> Repères historiques</p>
       <p><i class="fa fa-arrow-right"></i> Le protocole TCP/IP</p>
       <p><i class="fa fa-arrow-right"></i> Les données et l'information</p>
@@ -63,7 +82,7 @@
         <img src="Capture.PNG" alt="Image Futuriste" class="neon-image" />
       </div>
       <hr />
-      <h4>Le Web</h4>
+      <h4 id="section2" class="section">Le Web</h4>
       <p><i class="fa fa-arrow-right"></i> Repères historiques</p>
       <p>
         <i class="fa fa-arrow-right"></i> Normalisation de la présentation de
@@ -79,7 +98,7 @@
         <img src="Capture2.PNG" alt="Image Futuriste" class="neon-image" />
       </div>
       <hr />
-      <h4>Les réseaux sociaux</h4>
+      <h4 id="section3" class="section">Les réseaux sociaux</h4>
       <p><i class="fa fa-arrow-right"></i> Repères histotiques</p>
       <p><i class="fa fa-arrow-right"></i> Les données et l'information</p>
       <p><i class="fa fa-arrow-right"></i> Les algorithmes et les programmes</p>
@@ -90,7 +109,9 @@
         <img src="Capture3.PNG" alt="Image Futuriste" class="neon-image" />
       </div>
       <hr />
-      <h4>Les données structurées et leur traitement</h4>
+      <h4 id="section4" class="section">
+        Les données structurées et leur traitement
+      </h4>
       <p><i class="fa fa-arrow-right"></i> Repères historiques</p>
       <p><i class="fa fa-arrow-right"></i> Les données et l'information</p>
       <p><i class="fa fa-arrow-right"></i> Les algorithmes et les programmes</p>
@@ -102,7 +123,50 @@
         <img src="Capture4.PNG" alt="Image Futuriste" class="neon-image" />
       </div>
       <hr />
-      <h4>Localisation, cartographie et mobilité</h4>
+      <h4 id="section5" class="section">
+        Localisation, cartographie et mobilité
+      </h4>
+      <p><i class="fa fa-arrow-right"></i> Repères historiques</p>
+      <p><i class="fa fa-arrow-right"></i> Les données et l'information</p>
+      <p><i class="fa fa-arrow-right"></i> Les algorithmes et les programmes</p>
+      <p><i class="fa fa-arrow-right"></i> Les machines</p>
+      <p>
+        <i class="fa fa-arrow-right"></i> Impacts sur les pratiques humaines
+      </p>
+      <div class="container2">
+        <img src="Capture5.PNG" alt="Image Futuriste" class="neon-image" />
+      </div>
+      <hr />
+      <h4 id="section6" class="section">
+        Informatique embarquée et objets connectés
+      </h4>
+      <p><i class="fa fa-arrow-right"></i> Repères historiques</p>
+      <p><i class="fa fa-arrow-right"></i> Les données et l'information</p>
+      <p><i class="fa fa-arrow-right"></i> Les algorithmes et les programmes</p>
+      <p><i class="fa fa-arrow-right"></i> Les machines</p>
+      <p>
+        <i class="fa fa-arrow-right"></i> Impacts sur les pratiques humaines
+      </p>
+      <div class="container2">
+        <img src="Capture6.PNG" alt="Image Futuriste" class="neon-image" />
+      </div>
+      <hr />
+      <h4 id="section7" class="section">La photographie numérique</h4>
+      <p><i class="fa fa-arrow-right"></i> Repères historiques</p>
+      <p><i class="fa fa-arrow-right"></i> Les données et l'information</p>
+      <p><i class="fa fa-arrow-right"></i> Les algorithmes et les programmes</p>
+      <p><i class="fa fa-arrow-right"></i> Les machines</p>
+      <p>
+        <i class="fa fa-arrow-right"></i> Impacts sur les pratiques humaines
+      </p>
+      <div class="container2">
+        <img src="Capture7.PNG" alt="Image Futuriste" class="neon-image" />
+      </div>
+      <hr />
+      <p class="téléchargement">
+        Pour télécharger le programme officiel click
+        <a href="SNT_Programme.pdf" download> ici </a>
+      </p>
     </div>
     <footer>
       <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
