presque fin de la page1

--- a/page1/index.html
+++ b/page1/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La SNT</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <header class="haut">
@@ -31,16 +35,29 @@
       <h4>C'est quoi la SNT ?</h4>
       <hr />
       <p>
-        La Science Numérique et Technologique (SNT) est une matiere enseignée en
-        seconde générale et technlogique. Permettant de donnée une culture
-        numérique de base
+        La Science Numérique et Technologique (SNT) est une matière enseignée en
+        seconde générale et technologique. Elle permet d’acquérir une culture
+        numérique de base et d’avoir un usage réfléchi et utile de la
+        technologie. Elle permet aussi de découvrir des métiers liés et de voir
+        l’impact de la technologie sur d’autres domaines.
       </p>
       <h4>Sommaire:</h4>
       <hr />
       <h5>Le programme officiel de la SNT:</h5>
-      <p class="paragraphe">c un paragraphe</p>
+      <p class="paragraphe">
+        Le programme de SNT, défini par l’Éducation nationale, est organisé en
+        plusieurs thèmes qui permettent de découvrir différents aspects du
+        numérique. Il indique les notions à apprendre et les compétences à
+        développer tout au long de l’année.
+      </p>
       <h5>Qu'est-ce qu'on fait en SNT au lycée Charles DE GAULLE ?</h5>
-      <p class="paragraphe">c un paragraphe</p>
+      <p class="paragraphe">
+        Au lycée Charles de Gaulle, en SNT, on découvre le numérique à travers
+        plusieurs projets et activités. On apprend à utiliser des outils
+        technologiques, à comprendre comment fonctionnent Internet, les réseaux
+        et les données. Les cours sont un mélange de théorie et de pratique pour
+        mieux comprendre le monde du numérique.
+      </p>
       <h5>Pages HTML</h5>
       <p class="paragraphe">c un paragraphe</p>
       <h5>Non au Harcèlement</h5>
