mise en place du logo

--- a/page2/index.html
+++ b/page2/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="haut">
       <div class="container">
-        <h1>SNT Hub</h1>
+        <img class="logo" src="/Capture-removebg-preview.png" />
         <div class="sous-titre">
           <h2>Le programme</h2>
         </div>
