--- a/page3/index.html
+++ b/page3/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="haut">
       <div class="container">
-        <h1>SNT Hub</h1>
+        <img class="logo" src="/Capture-removebg-preview.png" />
         <div class="sous-titre">
           <h2>Qu'est-ce qu'on fait en SNT au lycée Charles DE GAULLE ?</h2>
         </div>
