--- a/page4/index.html
+++ b/page4/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="haut">
       <div class="container">
-        <h1>SNT Hub</h1>
+        <img class="logo" src="/Capture-removebg-preview.png" />
         <div class="sous-titre">
           <h2>Pages HTML</h2>
         </div>
