correct bug page et logo

--- a/page5/index.html
+++ b/page5/index.html
@@ -9,21 +9,23 @@
   <body>
     <header class="haut">
       <div class="container">
-        <img class="logo" src="/Capture-removebg-preview.png" />
+        <img class="logo" src="../Capture-removebg-preview.png" />
         <div class="sous-titre">
           <h2>Non au Harcèlement</h2>
         </div>
         <div class="nav-buttons">
-          <button onclick="location.href='/page1/index.html'">Accueil</button>
-          <button onclick="location.href='/page2/index.html'">
+          <button onclick="location.href='../page1/index.html'">Accueil</button>
+          <button onclick="location.href='../page2/index.html'">
             Le programme
           </button>
-          <button onclick="location.href='/page3/index.html'">
+          <button onclick="location.href='../page3/index.html'">
             Les activitées
           </button>
-          <button onclick="location.href='/page4/index.html'">Page 4</button>
-          <button onclick="location.href='/page5/index.html'">Page 5</button>
-          <button onclick="location.href='/page6/index.html'">Page 6</button>
+        </button>
+        <button onclick="location.href='../page4/index.html'">Pages HTML</button>
+        <button onclick="location.href='../page5/index.html'">Non au Harcèlement</button>
+        <button onclick="location.href='../page6/index.html'">Vers quelle poursuite d'études ?
+          </button>
         </div>
       </div>
     </header>
