--- a/page1/index.html
+++ b/page1/index.html
@@ -8,8 +8,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
-  </head>
+    /></head
+  ><!--test-->
   <body>
     <header class="haut">
       <div class="container">
@@ -25,10 +25,14 @@
           <button onclick="location.href='../page3/index.html'">
             Les activitées
           </button>
-          <button onclick="location.href='../page4/index.html'">Pages HTML</button>
-          <button onclick="location.href='../page5/index.html'">Non au Harcèlement</button>
-          <button onclick="location.href='../page6/index.html'">Vers quelle poursuite d'études ?
-
+          <button onclick="location.href='../page4/index.html'">
+            Pages HTML
+          </button>
+          <button onclick="location.href='../page5/index.html'">
+            Non au Harcèlement
+          </button>
+          <button onclick="location.href='../page6/index.html'">
+            Vers quelle poursuite d'études ?
           </button>
         </div>
       </div>
