--- a/page1/index.html
+++ b/page1/index.html
@@ -8,8 +8,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    /></head
-  ><!--test-->
+    />
+  </head>
   <body>
     <header class="haut">
       <div class="container">
