--- a/page5/index.html
+++ b/page5/index.html
@@ -14,16 +14,16 @@
           <h2>Non au Harcèlement</h2>
         </div>
         <div class="nav-buttons">
-          <button onclick="location.href='/page1/index.html'">Accueil</button>
-          <button onclick="location.href='/page2/index.html'">
+          <button onclick="location.href='/NSI_projet3D/page1/index.html'">Accueil</button>
+          <button onclick="location.href='/NSI_projet3D/page2/index.html'">
             Le programme
           </button>
-          <button onclick="location.href='/page3/index.html'">
+          <button onclick="location.href='/NSI_projet3D/page3/index.html'">
             Les activitées
           </button>
-          <button onclick="location.href='/page4/index.html'">Page 4</button>
-          <button onclick="location.href='/page5/index.html'">Page 5</button>
-          <button onclick="location.href='/page6/index.html'">Page 6</button>
+          <button onclick="location.href='/NSI_projet3D/page4/index.html'">Page 4</button>
+          <button onclick="location.href='/NSI_projet3D/page5/index.html'">Page 5</button>
+          <button onclick="location.href='/NSI_projet3D/page6/index.html'">Page 6</button>
         </div>
       </div>
     </header>
