page 3,4,5 fais a moitier

--- a/page5/index.html
+++ b/page5/index.html
@@ -16,12 +16,10 @@
         <div class="nav-buttons">
           <button onclick="location.href='../page1/index.html'">Accueil</button>
           <button onclick="location.href='../page2/index.html'">
-          <button onclick="location.href='/NSI_projet3D/page1/index.html'">Accueil</button>
-          <button onclick="location.href='/NSI_projet3D/page2/index.html'">
             Le programme
           </button>
           <button onclick="location.href='../page3/index.html'">
-            Les activitées
+            Les activitée
           </button>
         </button>
         <button onclick="location.href='../page4/index.html'">Pages HTML</button>
@@ -32,7 +30,11 @@
       </div>
     </header>
     <div>
-      <p>c'est un paragraphe</p>
+      <h1>Non au Harcèlement</h1>
+      <h2>Pourquoi dire NON au harcèlement ?</h2>
+      <p>Le harcèlement, qu'il soit physique, verbal ou en ligne, blesse profondément. Ensemble, nous devons promouvoir la bienveillance, le respect et la solidarité.</p>
+      <img src="Affiche_lycee_A_Creteil_lyceecharlesdegaulle_1.jpg" alt="affiche anti harcèlement" class="affiche-1">
+      <img src="Affiche_lycee_A_Creteil_lyceecharlesdegaulle_2.jpeg" alt="affiche anti harcèlement" class="affiche-2">
     </div>
     <footer>
       <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
