--- a/page6/index.html
+++ b/page6/index.html
@@ -29,7 +29,9 @@
       </div>
     </header>
     <div>
-      <p>c'est un paragraphe</p>
+      <iframe src="Mode_emploi_orientation_lycee_Premiere_2022.pdf" width="100%" height="1200px">
+        Votre navigateur ne supporte pas les iframes.
+    </iframe>
     </div>
     <footer>
       <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
