correction quelque ortographe

--- a/page1/index.html
+++ b/page1/index.html
@@ -23,7 +23,7 @@
             Le programme
           </button>
           <button onclick="location.href='../page3/index.html'">
-            Les activitées
+            Les activités
           </button>
           <button onclick="location.href='../page4/index.html'">
             Pages HTML
