--- a/page4/index.html
+++ b/page4/index.html
@@ -19,7 +19,7 @@
             Le programme
           </button>
           <button onclick="location.href='../page3/index.html'">
-            Les activitées
+            Les activités
           </button>
           <button onclick="location.href='../page4/index.html'">Pages HTML</button>
           <button onclick="location.href='../page5/index.html'">Non au Harcèlement</button>
