--- a/page5/index.html
+++ b/page5/index.html
@@ -19,7 +19,7 @@
             Le programme
           </button>
           <button onclick="location.href='../page3/index.html'">
-            Les activitée
+            Les activités
           </button>
         </button>
         <button onclick="location.href='../page4/index.html'">Pages HTML</button>
