suppression des fautes d'ortographes

--- a/page1/index.html
+++ b/page1/index.html
@@ -23,7 +23,7 @@
             Le programme
           </button>
           <button onclick="location.href='../page3/index.html'">
-            Les activitées
+            Les activités
           </button>
           <button onclick="location.href='../page4/index.html'">
             Pages HTML
@@ -47,16 +47,16 @@
         technologie. Elle permet aussi de découvrir des métiers liés et de voir
         l’impact de la technologie sur d’autres domaines.
       </p>
-      <h4>Sommaire:</h4>
+      <h4>Sommaire :</h4>
       <hr />
-      <h5>Le programme officiel de la SNT:</h5>
+      <h5>Le programme officiel de la SNT :</h5>
       <p class="paragraphe">
         Le programme de SNT, défini par l’Éducation nationale, est organisé en
         plusieurs thèmes qui permettent de découvrir différents aspects du
         numérique. Il indique les notions à apprendre et les compétences à
         développer tout au long de l’année.
       </p>
-      <h5>Qu'est-ce qu'on fait en SNT au lycée Charles DE GAULLE ?</h5>
+      <h5>Qu'est-ce qu'on fait en SNT au lycée Charles de Gaulle ?</h5>
       <p class="paragraphe">
         Au lycée Charles de Gaulle, en SNT, on découvre le numérique à travers
         plusieurs projets et activités. On apprend à utiliser des outils
@@ -65,10 +65,19 @@
         mieux comprendre le monde du numérique.
       </p>
       <h5>Pages HTML</h5>
-      <p class="paragraphe">c un paragraphe</p>
+      <p class="paragraphe">
+        L'HTML est un langage de programmation essentiel pour créer un site web.
+        Vous découvrirez ce langage en SNT.
+      </p>
       <h5>Non au Harcèlement</h5>
-      <p class="paragraphe">c un paragraphe</p>
+      <p class="paragraphe">
+        Le harcèlement n'est pas quelque chose de drôle. Vous découvrirez plein
+        d'informations utiles liées au harcèlement.
+      </p>
       <h5>Vers quelle poursuite d'études ?</h5>
+      <p class="paragraphe">
+        Vous verrez quelles sont les spécialités en rapport avec la SNT.
+      </p>
     </div>
     <footer>
       <p>&copy; 2025 SNT Hub - Tous droits réservés.</p>
