--- a/page2/index.html
+++ b/page2/index.html
@@ -23,12 +23,17 @@
             Le programme
           </button>
           <button onclick="location.href='../page3/index.html'">
-            Les activitées
+            Les activités
           </button>
-          <button onclick="location.href='../page4/index.html'">Pages HTML</button>
-          <button onclick="location.href='../page5/index.html'">Non au Harcèlement</button>
-          <button onclick="location.href='../page6/index.html'">Vers quelle poursuite d'études ?
-            </button>
+          <button onclick="location.href='../page4/index.html'">
+            Pages HTML
+          </button>
+          <button onclick="location.href='../page5/index.html'">
+            Non au Harcèlement
+          </button>
+          <button onclick="location.href='../page6/index.html'">
+            Quelle poursuite d'études ?
+          </button>
         </div>
       </div>
     </header>
@@ -100,7 +105,7 @@
       </div>
       <hr />
       <h4 id="section3" class="section">Les réseaux sociaux</h4>
-      <p><i class="fa fa-arrow-right"></i> Repères histotiques</p>
+      <p><i class="fa fa-arrow-right"></i> Repères historiques</p>
       <p><i class="fa fa-arrow-right"></i> Les données et l'information</p>
       <p><i class="fa fa-arrow-right"></i> Les algorithmes et les programmes</p>
       <p>
@@ -165,7 +170,7 @@
       </div>
       <hr />
       <p class="téléchargement">
-        Pour télécharger le programme officiel click
+        Pour télécharger le programme officiel clique
         <a href="SNT_Programme.pdf" download> ici </a>
       </p>
     </div>
