--- a/page3/index.html
+++ b/page3/index.html
@@ -23,19 +23,24 @@
             Le programme
           </button>
           <button onclick="location.href='../page3/index.html'">
-            Les activitées
+            Les activités
           </button>
-          <button onclick="location.href='../page4/index.html'">Pages HTML</button>
-          <button onclick="location.href='../page5/index.html'">Non au Harcèlement</button>
-          <button onclick="location.href='../page6/index.html'">Vers quelle poursuite d'études ?
-            </button>
+          <button onclick="location.href='../page4/index.html'">
+            Pages HTML
+          </button>
+          <button onclick="location.href='../page5/index.html'">
+            Non au Harcèlement
+          </button>
+          <button onclick="location.href='../page6/index.html'">
+            Quelle poursuite d'études ?
+          </button>
         </div>
       </div>
     </header>
     <div>
       <hr />
       <div class="container2">
-        <h4 class="theme">Theme A:</h4>
+        <h4 class="theme">Thème A:</h4>
         <h4>Internet <i class="fa-solid fa-wifi"></i></h4>
       </div>
       <h5>Phase de découverte:</h5>
@@ -60,7 +65,7 @@
         L'essentiel à connaître sur le thème
       </p>
       <h5>Découverte des métiers liés au thème</h5>
-      <h5>Capsules vidéos:</h5>
+      <h5>Capsules vidéo:</h5>
       <p>
         <i class="fa fa-arrow-right"></i>
         Dans quelle société numérique vivons-nous ?
@@ -72,7 +77,7 @@
       </p>
       <hr />
       <div class="container2">
-        <h4 class="theme">Theme B:</h4>
+        <h4 class="theme">Thème B:</h4>
         <h4>Le WEB <i class="fa-solid fa-globe"></i></h4>
       </div>
       <h5>Phase de découverte :</h5>
@@ -108,8 +113,8 @@
       </p>
       <hr />
       <div class="container2">
-        <h4 class="theme">Theme C:</h4>
-        <h4>Les Reseaux sociaux <i class="fa-solid fa-share-nodes"></i></h4>
+        <h4 class="theme">Thème C:</h4>
+        <h4>Réseaux sociaux <i class="fa-solid fa-share-nodes"></i></h4>
       </div>
       <h5>Phase de découverte :</h5>
       <p>
@@ -149,9 +154,9 @@
       </p>
       <hr />
       <div class="container2">
-        <h4 class="theme">Theme D:</h4>
+        <h4 class="theme">Thème D:</h4>
         <h4>
-          Informatique embarquee et objets connectes
+          Informatique embarquée et objets connectés
           <i class="fa-solid fa-microchip"></i>
         </h4>
       </div>
@@ -183,9 +188,9 @@
       <p><i class="fa fa-arrow-right"></i>recherche#D.2 : Fake or not ?</p>
       <hr />
       <div class="container2">
-        <h4 class="theme">Theme E:</h4>
+        <h4 class="theme">Thème E:</h4>
         <h4>
-          Les donnés structurées et leur traitement
+          Les données structurées et leur traitement
           <i class="fa-solid fa-database icon-data"></i>
         </h4>
       </div>
@@ -208,7 +213,7 @@
       </p>
       <hr />
       <div class="container2">
-        <h4 class="theme">Theme F:</h4>
+        <h4 class="theme">Thème F:</h4>
         <h4>La création numérique <i class="fa-solid fa-laptop-code"></i></h4>
       </div>
       <h5>Phase de découverte :</h5>
@@ -241,7 +246,7 @@
         STAR WARS choisi ?
       </p>
       <h5>
-        Phase de recherche : L'identité: Comment crées un personnage fictif ?
+        Phase de recherche : L'identité : Comment créer un personnage fictif ?
       </h5>
       <p>
         <i class="fa fa-arrow-right"></i>Quelle identité allez-vous donner à
@@ -276,7 +281,7 @@
       <h5>Phase de restitution des connaissances :</h5>
       <hr />
       <p class="téléchargement">
-        Pour télécharger le programme officiel click
+        Pour télécharger le programme officiel clique
         <a href="SNT-Sommaire_avec CDI.pdf" download> ici </a>
       </p>
     </div>
