--- a/page3/index.html
+++ b/page3/index.html
@@ -25,6 +25,12 @@
           <button onclick="location.href='../page3/index.html'">
             Les activitées
           </button>
+          <button onclick="location.href='../page4/index.html'">
+            Page HTML
+          </button>
+          <button onclick="location.href='../page4/index.html'">
+            Non au Harcèlement
+          </button>
           <button onclick="location.href='../page6/index.html'">
             Quelle poursuite d'études ?
           </button>
